Server working, client likely working. Rendering still todo.

--- a/DARCI/DARCI/DARCI/DARCI.vcxproj.filters
+++ b/DARCI/DARCI/DARCI/DARCI.vcxproj.filters
@@ -30,6 +30,12 @@
     <ClInclude Include="Kinect2.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="dataTypes.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="OculusRenderer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="DARCI.cpp">
@@ -45,6 +51,12 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Kinect2.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="dataTypes.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="OculusRenderer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
