--- a/DARCI/DARCI/DARCI/DARCI.vcxproj
+++ b/DARCI/DARCI/DARCI/DARCI.vcxproj
@@ -58,6 +58,9 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalLibraryDirectories>C:\Program Files\SDL2-2.0.3\VisualC\SDL\Win32\Debug;C:\Program Files\Microsoft SDKs\Kinect\v2.0-PublicPreview1409\Lib\x86;C:\Program Files\Microsoft SDKs\Kinect\v2.0-PublicPreview1409\Lib\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>Kinect20.lib;SDL2.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <Profile>true</Profile>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -80,17 +83,21 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="DARCI.h" />
+    <ClInclude Include="dataTypes.h" />
     <ClInclude Include="InputDevice.h" />
     <ClInclude Include="Kinect2.h" />
     <ClInclude Include="NetClient.h" />
     <ClInclude Include="NetServer.h" />
+    <ClInclude Include="OculusRenderer.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="DARCI.cpp" />
+    <ClCompile Include="dataTypes.cpp" />
     <ClCompile Include="InputDevice.cpp" />
     <ClCompile Include="Kinect2.cpp" />
     <ClCompile Include="NetClient.cpp" />
     <ClCompile Include="NetServer.cpp" />
+    <ClCompile Include="OculusRenderer.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
