--- a/DARCI/DARCI/DARCI/DARCI.vcxproj.filters
+++ b/DARCI/DARCI/DARCI/DARCI.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClInclude Include="OVR_SDL2_app.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="OVR_SDL2_nav.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="DARCI.cpp">
@@ -63,6 +66,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="OVR_SDL2_app.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="OVR_SDL2_nav.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
